# BigInt

./: .gitignore  .travis.yml  BigInt.cpp  BigInt.h  CMakeLists.txt  LICENSE  README.md  main.cpp
src/: BigInt.cpp  BigInt.h
testing/: addition.cpp  append.cpp  append_tests.cpp  construct.cpp  parameters.cpp  subtraction.cpp
